Added the Gradle task to automatically generate AOT-Cache. Changed path to generated AOT-Cache to ..\build\libs\FFProbeChaptersConverter.aot in all CMD-scripts.